--- a/src/billance/Billance.form
+++ b/src/billance/Billance.form
@@ -230,7 +230,7 @@
             </Property>
           </Properties>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;TariffSelectionView&gt;"/>
           </AuxValues>
         </Component>
         <Component class="javax.swing.JComboBox" name="contractCmb">
