--- a/src/billance/Billance.form
+++ b/src/billance/Billance.form
@@ -283,7 +283,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="contractCmbActionPerformed"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;ContractView&gt;"/>
           </AuxValues>
         </Component>
         <Component class="javax.swing.JCheckBox" name="eletricityChck">
