--- a/src/billance/Billance.form
+++ b/src/billance/Billance.form
@@ -298,7 +298,7 @@
             </Property>
           </Properties>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;FlatView&gt;"/>
           </AuxValues>
         </Component>
         <Component class="javax.swing.JTextField" name="documentText">
